--- a/Divertidamente.html
+++ b/Divertidamente.html
@@ -27,11 +27,11 @@
             <img class="divertidamente-img-item" src="Divertidamente/meme1.jpg">
             <img class="divertidamente-img-item" src="Divertidamente/meme2.jpg">
             <img class="divertidamente-img-item" src="Divertidamente/meme8.jpg">
-            <img class="divertidamente-img-item" src="divertidamente/meme3.jpg">
+            <img class="divertidamente-img-item" src="Divertidamente/meme3.jpg">
             <img class="divertidamente-img-item" src="Divertidamente/meme4.jpg">
             <img class="divertidamente-img-item" src=" Divertidamente/meme5.jpg">
-            <img class="divertidamente-img-item" src=" divertidamente/meme6.jpg">
-            <img class="divertidamente-img-item" src=" divertidamente/meme7.jpg">
+            <img class="divertidamente-img-item" src=" Divertidamente/meme6.jpg">
+            <img class="divertidamente-img-item" src=" Divertidamente/meme7.jpg">
         </div>
 
     </main>
